# terpinkb

./: .gitignore  AGENTS.md  Readme.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: demo.py
src/terpinkb/: __init__.py  keypad.py  messages.py  modal.py  policy.py  result.py
src/terpinkb/css/: randomized_pin_modal.tcss
tests/: test_keypad_layout.py  test_modal.py  test_policy.py  test_result.py
